# Cinder

./: CMakeLists.txt  CMakeSettings.json  imgui.ini  main.cpp
Core/: FileManager.h  Parser.h  ResourceManager.h
Core/ECS/: ECS_Entity.h
Core/Headers/: Components.h  Entity.h  Material.h  MaterialInstance.h  Mesh.h
Core/Sources/: Components.cpp  Entity.cpp  Material.cpp  MaterialInstance.cpp  Mesh.cpp
Main/: Engine.cpp  Engine.h  Scene.cpp  Scene.h
Math/: Mat3.h  Mat4.h  Vec2.h  Vec3.h  Vec4.h
Objects/General/: Vertex.h
Objects/Headers/: Camera.h  EBO.h  Light.h  Shader.h  Texture.h  VAO.h  VBO.h  Vertex.h
Objects/Sources/: Camera.cpp  EBO.cpp  Light.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  Vertex.cpp
Shaders/: default_lit.frag  textured_lit.frag  world_grid.frag  world_grid.vert
Shapes/Headers/: Cube.h  Floor.h
assets/Models/: Chest_LowPoly.mtl  House.mtl  PortalMesh.fbx  Project1.mtl
assets/Models/matikantenhauser/: license.txt  scene.gltf
assets/Models/robot/: LP_Sketchfab.mtl  license.txt  scene.gltf
assets/Models/vilhelm-13-low-res-textures/source/: LP_Sketchfab.fbx
assets/Shaders/: bloom.frag  bloomBlur.frag  default.vert  default_lit.frag  default_unlit.frag  hdr.frag  item_icon.frag  item_icon.vert  screen.frag  screen.vert  singleColor.frag  textured_lit.frag  textured_unlit.frag  world_grid.frag  world_grid.vert
assets/Shaders/deferred/: deferred.frag  deferred.vert  lightPass.frag
assets/Shaders/shadow/: pointMap.frag  pointMap.geom  pointMap.vert  shadowMap.frag  shadowMap.vert
assets/Shaders/skybox/: skybox.frag  skybox.vert
assets/Shaders/ssao/: ssao.frag  ssaoBlur.frag
includes/Engine/: Engine.h
includes/Entity/: Entity.h  LightEntity.h  MeshEntity.h
includes/Graphics/: Vertex.h
includes/Math/: CinderMath.h  Mat4.h  Quaternion.h  Vec2.h  Vec3.h  Vec4.h
includes/Primitives/: Cube.h  Plane.h  Quad.h  Skybox.h
includes/Rendering/: Camera.h  Renderer.h  Scene.h
includes/Resources/: Handle.h  Material.h  Mesh.h  Model.h  ModelLoader.h  Resource.h  ResourceManager.h  Shader.h  Texture.h
includes/Scene/: Camera.h  Scene.h
includes/Utilities/: AssetManager.h  DefaultMacros.h  Delegate.h  FileLoader.h  FileManager.h  IconRegistry.h
src/: main.cpp
src/Engine/: Engine.cpp
src/Entity/: Entity.cpp  LightEntity.cpp  MeshEntity.cpp
src/Rendering/: Camera.cpp  Renderer.cpp  Scene.cpp
src/Resources/: Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  Shader.cpp  Texture.cpp
src/Scene/: Camera.cpp  Scene.cpp
src/Utilities/: Delegate.cpp  FileLoader.cpp
